qiding-kubernetes/qiding-ingress-service.yaml
apiVersion:  extensions/v1beta1
kind: Ingress
metadata:
    name: qiding-ingress
spec:
   rules:
     - host: www.qiding.com
       http:
          paths:
            - path: /
              backend:
                 serviceName: qiding-web-service
                 servicePort: 9001
